# algorithm

./: .gitignore  4072.cpp  CMakeLists.txt  LaTeX_snippet.tex  README.md  compile_flags.txt  test.cpp
No.1/: 1.HZOJ-235.cpp  2.HZOJ-236.cpp  3.HZOJ-237.cpp  4.HZOJ-239.cpp
No.10/: 1.Quick-Find.cpp  2.Quick-Union.cpp  3.Weighted-Quick-Union.cpp  5.HZOJ-72.cpp  6.HZOJ-322.cpp  7.HZOJ-327.cpp  Path-Compress.cpp
No.11/: 1.monotonic_queue.cpp  2.monotonic_stack.cpp  3.HZOJ-271.cpp  4.HZOJ-270.cpp  5.HZOJ-264.cpp  6.HZOJ-372.cpp
No.12/: 1.P1219.cpp  10.P1101.cpp  11.P2392.cpp  12.P2392-2.cpp  2.P1135.cpp  3.P1036.cpp  4.P1443.cpp  5.P1605.cpp  6.P1433.cpp  7.P1019.cpp  8.P1032.cpp  9.P2404.cpp
No.13/: 1.HZOJ-505.cpp  10.HZOJ-257.cpp  11.P9749.cpp  2.HZOJ-504.cpp  3.HZOJ-503.cpp  4.HZOJ-258.cpp  5.HZOJ-511.cpp  6.HZOJ-255.cpp  7.HZOJ-254.cpp  8.HZOJ-253.cpp  9.HZOJ-259.cpp
No.14/: 1.HZOJ-38.cpp  10.P1050.cpp  11.P1050-2.cpp  12.P1057.cpp  13.P1096.cpp  14.HZOJ-43.cpp  15.HZOJ-47.cpp  16.HZOJ-48.cpp  17.HZOJ-49.cpp  18.HZOJ-44.cpp  19.HZOJ-45.cpp  2.HZOJ-38-2.cpp  20.HZOJ-46.cpp  21.HZOJ-360.cpp  22.P1541.cpp  23.HZOJ-41-better.cpp  24.HZOJ-41-better-better.cpp  25.HZOJ-50.cpp  26.HZOJ-50-better.cpp  27.HZOJ-46-better.cpp  28.HZOJ-44-better.cpp  29.HZOJ-49-better.cpp  3.HZOJ-42.cpp  30.HZOJ-49-better2.cpp  31.HZOJ-51.cpp  32.HZOJ-51-better.cpp  33.HZOJ-51-better-better.cpp  33.HZOJ-52.cpp  34.HZOJ-52.cpp  35.P1108.cpp  36.P1113.cpp  37.P1115.cpp  38.P1481.cpp  39.P1507.cpp  4.HZOJ-40.cpp  40.P1509.cpp  41.P1103.cpp  42.P2426.cpp  43.P156.cpp  44.P1156-2.cpp  (+11 more)
No.3/: a.out  (+9 more)
(+343 files in other folders)
