cmake_minimum_required(VERSION 3.17)
project (algorithm)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_COMPILER /usr/bin/clang)
set(CMAKE_CXX_COMPILER /usr/bin/clang++)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "-Wall -DDEBUG -std=c++14")
include_directories("/home/songxinglin/algorithm/utils")
link_directories("/home/songxinglin/algorithm/build" )
file(GLOB libs utils/*)
add_library(utils SHARED ${libs})
file(GLOB files *.cpp */*.cpp)
foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    string(REGEX MATCHALL "No\\.[0-9]+" from ${file})
    string(CONCAT exe_name "from_${from}-${exe}")
    if (${file} MATCHES trash)
        continue()
    endif()
    if (NOT ${file} MATCHES lib)
        add_executable(${exe_name} ${file})
        target_link_libraries(${exe_name} utils)
        message(------------ 添加文件: ${file})
        continue()
    endif ()
    message(************ 跳过文件: ${file})
endforeach ()